# django-content-blocks

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  coverage.xml  local.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.envs/.local/: .django  .postgres  .tox
compose/local/django/: Dockerfile  start
compose/local/docs/: Dockerfile  start
compose/local/tox/: Dockerfile
compose/production/django/: Dockerfile
compose/production/postgres/maintenance/: backup  restore
content_blocks/: abstract_models.py  admin.py  admin_forms.py  apps.py  cache.py  conf.py  fields.py  forms.py  import_export.py  models.py  permissions.py  readme.md  signals.py  urls.py  views.py  widgets.py
content_blocks/management/commands/: clear_content_blocks_cache.py  export_content_block_templates.py  import_content_block_templates.py  set_content_blocks_cache.py  update_content_blocks_cache.py
content_blocks/migrations/: 0001_initial.py  0002_alter_contentblock_css_class_and_more.py  0003_alter_contentblocktemplatefield_unique_together_and_more.py  0004_remove_contentblocktemplate_no_cache.py  0005_alter_contentblockcollection_options.py  0006_iframefield_contentblockfield_iframe.py  0006_iframefield_contentblockfield_iframe_squashed_0009_alter_contentblock_name.py  0007_contentblock_name_and_more.py  0008_auto_20231019_1729.py  0009_alter_contentblock_name.py  0010_alter_contentblockfield_text.py  0010_auto_20231019_1928.py
content_blocks/services/: content_block.py  content_block_parent.py  content_block_template.py
content_blocks/static/content_blocks/css/: content_block_template_admin.css  content_blocks.css
content_blocks/static/content_blocks/jqueryform/: jquery.form.min.js.map
content_blocks/static/content_blocks/jqueryui/: jquery-ui.min.css  jquery-ui.min.js
content_blocks/static/content_blocks/js/: admin_choices_widget.js  (+5 more)
content_blocks/templates/: base.html
content_blocks/templates/content_blocks/: content_block_collection.html  content_block_preview.html
content_blocks/templatetags/: content_block_admin.py  content_blocks.py
content_blocks/tests/: factories.py  settings_runner.py  storages.py  test_abstract_models.py  test_admin.py  test_admin_forms.py  test_apps.py  test_cache.py  test_fields.py  test_forms.py  test_management_commands.py  test_models.py  test_permissions.py  test_signals.py  test_templatetags.py  test_views.py  test_widgets.py
content_blocks/tests/services/: test_content_block.py  test_content_block_cache.py  test_content_block_parent.py
django_content_blocks.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
docs/: Makefile  cacheing_content_blocks.rst  conf.py  configuration.rst  content_block_template_export_and_import.rst  content_block_templates.rst  example_pages_app.rst  getting_started.rst  index.rst  the_content_block_editor.rst
example/: urls.py
example/pages/: admin.py  apps.py  models.py  urls.py  views.py
example/pages/fixtures/: content_blocks.json
example/pages/migrations/: 0001_initial.py  0002_page_sites.py  0003_remove_page_sites_pagesites_pagesite.py
example/settings/: base.py  docs.py  local.py  test.py  test_cache_setting.py  test_disable_update_cache_model_choice.py  test_no_dbtemplates.py  test_no_django_cleanup.py  test_storage_setting.py
example/templates/: base.html  header.html
(+60 files in other folders)
