# setup.cfg
[metadata]
name = django-content-blocks
version = 1.1.3
description = HTML content blocks for Django.
long_description = file:README.rst
url = https://github.com/Quantra/django-content-blocks
author = Vince Coleman
author_email = vince@shystudios.co.uk
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Site Management
project_urls =
    Documentation=https://django-content-blocks.readthedocs.io
    Source=https://github.com/Quantra/django-content-blocks
keywords =
    django
    django-content-blocks
    django content blocks
    django content
    django dynamic content
    django content manager
    django cms

[options]
include_package_data = true
packages = find:
python_requires = >=3.7
dependency_links = https://pypi.shystudios.co.uk/packages/
install_requires =
    Django >= 3.2
    django-admin-sortable2
    django-clone
    Pillow

[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[isort]
line_length = 88
multi_line_output = 3
default_section = THIRDPARTY
skip = venv/
skip_glob = **/migrations/*.py
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true